--- a/css/style.scss
+++ b/css/style.scss
@@ -44,16 +44,16 @@ main{
 }
 
 
-hotter{
+fotter{
     
     
-    .hotter-text{
+    .fotter-text{
         text-align:center;
         padding: 20px;
     }
     
     
-    .hotter-button{
+    .fotter-button{
         width:200px;
         font-size:24px;
         font-weight:bold;
@@ -65,6 +65,7 @@ hotter{
         background-color:#000;
         border-radius:10px;
         margin: 0 auto;
+        margin-bottom: 20px;
         
     }
 }
